@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 13-Feb-2010 Jean-Marie Simonet
 ^ Refactoring mod_wrapper ini/keys
+^ Refactoring mod_weblinks ini/keys
 
 13-Feb-2010 Ian MacLennan
 # Eliminating errors in unit tests
